--- a/public/wp-content/themes/blackrock/scss/layout/_general.scss
+++ b/public/wp-content/themes/blackrock/scss/layout/_general.scss
@@ -4,15 +4,21 @@
   box-sizing: border-box;
 }
 
+html {
+  max-width: 100%;
+}
+
 body {
     padding: 0;
     margin: 0;
+    width: 100%;
     max-width: 100%;
     overflow-x: hidden;
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
+    // max-width: 100%;
     height: auto;
 }
 
@@ -38,8 +44,13 @@ blockquote {
 .caption {
   
   p {
-      padding: 10px 0 0 0;
+      padding: 10px;
       margin: 0;
-      @include body-20;
+      @include body-16;
+      
+      @media #{$mq-tablet-port}{
+        padding: 10px 0 0 0;
+        @include body-20;
+      }
   }
 }
