--- a/public/wp-content/themes/blackrock/scss/modules/_image_carousel.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_image_carousel.scss
@@ -1,7 +1,72 @@
 .image-carousel {
     margin-bottom: calc(100vw / 12);
+    position: relative;
     
     .caption {
-        padding-left: 40px;
+        @media #{$mq-tablet-port}{
+            padding-left: 40px;
+        }
+    }
+    
+    .swiper-button-next,
+    .swiper-button-prev {
+        display: none;
+        padding: 0;
+        margin: 0;
+        top: 0;
+        left: 0;
+        width: 50vw;
+        height: 100%;
+
+        @media #{$mq-tablet-port}{
+            display: block;
+        }
+
+        &:after {
+            display: none;
+        }
+    }
+
+    .swiper-button-prev,
+    .swiper-button-prev:hover {
+        cursor: url(../img/icons/arrow-white-left.svg) 0 0, pointer !important;
+    }
+
+    .swiper-button-next,
+    .swiper-button-next:hover {
+        right: 0;
+        left: auto;
+        cursor: url(../img/icons/arrow-white-right.svg) 0 0, pointer !important;
+    }
+
+    .swiper-pagination-bullets {
+        height: 3px;
+        width: 46vw;
+        display: flex;
+        margin-left: 50vw;
+        margin-top: 0px;
+        background-color: $br-blue !important;
+        position: relative;
+        top: auto;
+        left: auto;
+        bottom: auto;
+
+        .swiper-pagination-bullet {
+            flex: 1;
+            height: 3px;
+            border-radius: 0;
+            padding: 0;
+            margin: 0;
+            opacity: 0;
+
+           &.swiper-pagination-bullet-active {
+                background: $br-blue;
+            }
+        }
+
+        .swiper-pagination-bullet-active ~ .swiper-pagination-bullet {
+            background: $br-grey;
+			opacity: 1;
+        }
     }
 }
