--- a/public/wp-content/themes/blackrock/scss/modules/_two_col_sticky.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_two_col_sticky.scss
@@ -1,7 +1,7 @@
 .two-col-sticky {
     @include grid;
     
-    @media #{$mq-mobile}{
+    @media #{$mq-tablet-port}{
         margin: 0px 40px calc(100vw / 12) 40px;
         grid-template-columns: 5fr 1fr 6fr;
         grid-template-areas: "left . right";
